catkin_ws/logs/backend/build.make.1065.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp: In constructor ‘RosHandler::RosHandler()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:9:12: error: ‘argc’ was not declared in this scope
  ros::init(argc,argv,"rgbd_backend");
            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:9:17: error: ‘argv’ was not declared in this scope
  ros::init(argc,argv,"rgbd_backend");
                 ^
make[2]: *** [CMakeFiles/frontend.dir/src/RosHandler.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
